# Switchyard

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SESSIONS.md  SPEC.md  pyproject.toml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: DETECTION.md  LEDGER_FORMAT.md  QUICKSTART.md  ROADMAP.md
examples/: ci_gate.yml  proxy_mode.py  sdk_wrapper.py
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/commands/: audit.md  report.md  rescope.md
plugin/skills/switchyard/: SKILL.md
scripts/: make_demo_gif.py  make_social_preview.py  record-demo.sh
src/switchyard/: __init__.py  ci.py  cli.py  client.py  detect.py  export.py  ledger.py  mcp_server.py  proxy.py  report.py  rescope.py
src/switchyard/templates/: binary_to_reverse_engineering.yaml  bio_chem_to_safety.yaml  c2_to_detection.yaml  exploit_to_defensive.yaml  malware_to_triage.yaml  password_cracking_to_audit.yaml  payload_to_detection.yaml  pentest_to_authorized.yaml  phishing_to_awareness.yaml  privesc_to_hardening.yaml  vuln_research_to_disclosure.yaml  web_attack_to_appsec.yaml
tests/: conftest.py  helpers.py  test_ci.py  test_cli.py  test_client.py  test_detect.py  test_end_to_end.py  test_export.py  test_ledger.py  test_plugin.py  test_proxy.py  test_report.py  test_rescope.py
tests/fixtures/: ambiguous.json  declared_fallback.json  normal.json
