[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "switchyard-ai"
dynamic = ["version"]
description = "Detect silent Claude model fallbacks, log them to a tamper-evident local ledger, and keep your work on the frontier model."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Switchyard contributors" }]
keywords = ["anthropic", "claude", "llm", "audit", "fallback", "ledger"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "anthropic>=0.40",
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.7",
]

[project.optional-dependencies]
proxy = ["starlette>=0.37", "uvicorn>=0.30"]
mcp = ["mcp>=1.0"]

[project.scripts]
switchyard = "switchyard.cli:main"

[project.urls]
Homepage = "https://github.com/pinalmdave/switchyard"
Issues = "https://github.com/pinalmdave/switchyard/issues"
Changelog = "https://github.com/pinalmdave/switchyard/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "types-pyyaml>=6.0",
]

[tool.hatch.version]
path = "src/switchyard/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/switchyard"]
# Ship the YAML template library inside the wheel (F-RSC-01).
include = ["src/switchyard/templates/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.mypy]
strict = true
files = ["src"]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=switchyard --cov-report=term-missing --cov-fail-under=90"
markers = ["live: tests that hit the real Anthropic API (excluded in CI)"]

[tool.coverage.run]
source = ["switchyard"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
